2014-01-07 Jonathan Olmsted <jpolmsted@gmail.com>
	* src/rtn1.cpp, src/etn1.cpp, src/vtn1.cpp, inst/include/*, inst/include/RcppTN.h, src/RcppTN_init.cpp :
	do not use Rcpp Attributes for C++--level export, causes memory bugs with repeated calls.

2014-01-03 Jonathan Olmsted <jpolmsted@gmail.com>
	* src/rtn1.cpp, src/etn1.cpp, src/vtn1.cpp, inst/include/* : use Rcpp Attributes
	for C++--level export.

2013-12-09 Jonathan Olmsted <jpolmsted@gmail.com>
	* vignettes/using.Rnw: Shows variance API usage.
	* inst/include/RcppTN.h, src/RcppTN_init.cpp: Add variance
	function to C++ API.
	* tests/testthat/test-API.R: Add variance function to API tests.
	* DESCRIPTION: version 0.1-4

2013-12-04 Jonathan Olmsted <jpolmsted@gmail.com>
	* src/vtn1.cpp, src/vtn.cpp, src/vtnRcpp.cpp, R/vtn.R: Add
	variance calculation functionality.
	* R/rtn.R, R/etn.R: Errors on wrongly sized inputs.
	* src/rtnRcpp.cpp: Memory bug-inducing scope issue fixed.
	* src/check1.cpp: Parens added for compiler happiness.

2013-12-02  Jonathan Olmsted <jpolmsted@gmail.com>

	* DESCRIPTION: version 0.1-3
	* R/rtn.R: R warning on NA return values. Negligible effect on
	performance.
	* R/check1.cpp: Check for finite mean. Check for finite sd.
	* src/etn.cpp: Add expectation calculation at the C++ level.
	* R/etn.R: Add expectation calculation at the R level.

2013-11-27  Jonathan Olmsted <jpolmsted@gmail.com>

	* ChangeLog: ChangeLog added. Previous changes not explicitly
	documented beyond commits.
	* src/rtn.cpp: rtn() checks for valid inputs and returns NA_REAL
	for invalid inputs.
	* vignettes/using.Rnw: shows new NA return values.
	* DESCRIPTION: version 0.1-2